--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
           <p class="jello">V</p>
           <p class="jello">i</p>
           <p class="jello">c</p>
+          <p class="jello">t</p>
           <p class="jello">o</p>
           <p class="jello">r</p>
           &nbsp;
