--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </li>
         <li id="projects-mobile-tab" class="mobile-navbar-tabs-li projects" onclick="hidemenubyli()">
           <a href="#projects" tabindex="0" aria-label="projects menu button">
-            &#60;/Projects&#62;
+            &#60;/Cooming Soon&#62;
           </a>
         </li>
       </ul>
