--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="keywords"
     content="Victor Sanjaya Adalah Frontend" />
   <meta name="author" content="Victor Sanjaya" />
-  <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+<!--   <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" /> -->
   <meta property="og:title" content="Victor Sanjaya | Portfolio" />
   <meta property="og:description"
     content="Halo! Nama saya Victor. Saya adalah pengembang web dan seniman visual digital. Kunjungi dan ketahui lebih lanjut tentang saya dan proyek/desain saya. Saya menghargai struktur konten yang sederhana, pola desain yang bersih, dan interaksi yang penuh pertimbangan." />
@@ -38,7 +38,7 @@
   <meta property="og:url" content="https://vinodjangid.site" />
   <meta property="og:site_name" content="Victor Sanjaya Portfolio" />
 
-  <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+<!--   <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" /> -->
   <meta name="twitter:site" content="@Portfolio" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Victor Sanjaya | Portfolio" />
