--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="src/webp/victor1.jpg" alt="Victor Sanjaya" tabindex="0" aria-label="image of vinod" />
+            <img src="src/webp/victorft.jpg" alt="Victor Sanjaya" tabindex="0" aria-label="image of vinod" />
           </div>
         </div>
       </div>
